optimize: 项目优化 头部组件样式优化 1. 图片资源加载失败时添加默认图片 2. 加入Vuex进行状态

--- a/src/assets/styles/common.less
+++ b/src/assets/styles/common.less
@@ -1,3 +1,18 @@
 body {
   font-size: @font-medium;
 }
+
+html {
+  box-sizing: border-box;
+}
+
+//  *：通过选择器的权重为0,是最小的，可以被任意元素覆盖
+*,
+*::after,
+*::before {
+  box-sizing: inherit;
+}
+
+.mr {
+  margin-right: 0.08rem;
+}
