--- a/src/assets/styles/vars.less
+++ b/src/assets/styles/vars.less
@@ -4,6 +4,7 @@
 @font-weight-text: 200;
 // 边框
 @border-color: rgba(7, 17, 27, 0.1);
+@header-bg-color: rgba(7, 17, 27, 0.5);
 // 颜色
 @blue: #00a0dc;
 // 字体大小
